Added selector box for difficulty

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <!-- <p>text</p> -->
-  <table>
-    <tr>
-      <td></td>
-    </tr>
-  </table>
+  <div class="selection">
+    <label>Choose difficulty:</label>
+    <select id="choice">
+      <option value="easy">Easy</option>
+      <option value="medium" selected>Medium</option>
+      <option value="hard">Hard</option>
+    </select>
+  </div>
   <script src="./main.js"></script>
 </body>
 </html>
