added table element with id 'game-window'

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <option value="hard">Hard</option>
     </select>
   </div>
-  <table id=game-window></table>
+  <table id="game-window"></table>
   <script src="./main.js"></script>
 </body>
 </html>
