updated label text property

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="selection">
-    <label>Choose difficulty:</label>
+    <label><strong>Choose difficulty:</strong></label>
     <select id="choice">
       <option value="easy">Easy</option>
       <option value="medium" selected>Medium</option>
