--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="selection">
     <label><strong>Choose difficulty:</strong></label>
     <select id="choice">
-      <option value="easy">Easy</option>
-      <option value="medium" selected>Medium</option>
+      <option value="easy" selected>Easy</option>
+      <option value="medium">Medium</option>
       <option value="hard">Hard</option>
     </select>
   </div>
