--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
   <div id="playerCountBox">
-    <p>Players Online: <span class="playerCount"></span></p>
+    <p>Players: <span id="playerCount"></span></p>
+    <span id="username"><p>sunnyC</p></span>
   </div>
+  <ul></ul>
   <div id="header">
     <h1 id="title">Minesweepers</h1>
   </div>
@@ -30,7 +32,7 @@
         </select>
       </div>
       <form id="joinServerForm">
-        <input type="text" id="serverCodeInput" placeholder="Server Code"><br>
+        <input type="text" id="serverCodeInput" placeholder="Server ID"><br>
         <input type="submit" id="joinServerButton" value="Join Server">
       </form>
     </div>
