updated button styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <form id="joinServerForm">
         <input type="text" id="serverCodeInput" placeholder="Server ID"><br>
-        <input type="submit" id="joinServerButton" value="Join Server">
+        <button type="submit" id="joinServerButton"><span>Join Server</span></button>
       </form>
     </div>
     <div id="gameBoard">
