updated code implementing servers

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="playerCountBox">
     <p>Players: <span id="playerCount"></span></p>
-    <span id="username"><p>sunnyC</p></span>
+    <span id="username"><p></p></span>
   </div>
   <ul></ul>
   <div id="header">
