--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Pacifico&display=swap" rel="stylesheet"></head>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Pacifico&display=swap" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Pacifico&family=Press+Start+2P&display=swap" rel="stylesheet">
+</head>
 <body>
   <div id="playerCountBox">
     <p>Players: <span id="playerCount"></span></p>
-    <span id="username"><p></p></span>
+    <div id="playerList"></div>
   </div>
-  <ul></ul>
+  <div class="servers"></div>
   <div id="header">
     <h1 id="title">Minesweepers</h1>
   </div>
