updated title and header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minesweeper</title>
+  <title>Multisweepers</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
   </div>
   <div class="servers"></div>
   <div id="header">
-    <h1 id="title">Minesweepers</h1>
+    <h1 id="title">Multisweepers</h1>
   </div>
   <div id="container">
     <div id="sidebar">
