added folders and updated paths

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multisweepers</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Pacifico&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -42,10 +42,10 @@
       <table id="gameWindow"></table>
     </div>
     <!-- <div class="sideHeader">
-      <h1>Minesweepers</h1>
+      <h1>Multisweepers</h1>
     </div> -->
   </div>
-  <script src="client.js" defer></script>
+  <script src="/client/client.js" defer></script>
 </body>
 
 </html>
