--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Pacifico&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="playerCountBox">
-    <p>Players: <span id="playerCount"></span></p>
-    <div id="playerList"></div>
-  </div>
+  <table id="leaderboard">
+    <thead>
+      <tr>
+        <th>Players</th>
+        <th>Wins</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+
   <div class="servers"></div>
   <div id="header">
     <h1 id="title">Multisweepers</h1>
