--- a/client/index.html
+++ b/client/index.html
@@ -29,14 +29,13 @@
   <div class="servers"></div>
   <div id="container">
     <div id="header">
-      <h1 id="title">Multisweepers</h1>
+      <!-- <h1 id="title">Multisweepers</h1> -->
     </div>
     <div id="sidebar">
       <div id="serverItem">
         <p>Server: <span id="serverCode">loading server...</span></p>
       </div>
       <div id="difficultySelection">
-        <label><strong>Difficulty:</strong></label>
         <select id="choice">
           <option value="easy" selected>Easy</option>
           <option value="medium">Medium</option>
@@ -44,8 +43,8 @@
         </select>
       </div>
       <form id="joinServerForm">
-        <input type="text" id="serverCodeInput" placeholder="Server ID"><br>
-        <button type="submit" id="joinServerButton"><span>Join Server</span></button>
+        <input type="text" id="serverCodeInput" placeholder="Server ID">
+        <button type="submit" id="joinServerButton"><span>Join</span></button>
       </form>
     </div>
     <div id="gameBoard">
