--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
     </div>
     <div id="sidebar">
       <div id="serverItem">
-        <p>Server: <span id="serverCode">loading server...</span></p>
+        <p>Server: <span id="serverCode">Loading <i class="fa-solid fa-spinner fa-spin-pulse" style="color: #FFFFFF;"></i></span></p>
       </div>
       <div id="difficultySelection">
         <select id="choice">
