implemented 'enableJoining' feature and mobile chording

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,17 @@
     <div id="sidebar">
       <div id="serverItem">
         <p>Server: <span id="serverCode">Loading <i class="fa-solid fa-spinner fa-spin-pulse" style="color: #FFFFFF;"></i></span></p>
+        <label id="enableJoinSwitch">
+          <div class="button b2" id="button">
+            <input type="checkbox" class="checkbox" checked/>
+            <div class="knobs">
+              <span></span>
+            </div>
+            <div class="layer"><i class="fa-solid fa-user-group" style="color: #000000;"></i>
+              <i class="fa-solid fa-user" style="color: #000000;"></i>
+            </div>
+          </div>
+        </label>
       </div>
       <div id="difficultySelection">
         <select id="choice">
