--- a/client/index.html
+++ b/client/index.html
@@ -33,13 +33,11 @@
     <div id="sidebar">
       <div id="serverItem">
         <p>Server: <span id="serverCode">Loading <i class="fa-solid fa-spinner fa-spin-pulse" style="color: #FFFFFF;"></i></span></p>
-        <label id="enableJoinSwitch">
-          <div class="button b2" id="button">
-            <input type="checkbox" class="checkbox" checked/>
-            <div class="knobs">
-              <span></span>
-            </div>
-            <div class="layer"><i class="fa-solid fa-user-group" style="color: #000000;"></i>
+        <label id="enableJoinSwitch" for="myToggle">
+          <input class="toggle__input" name="" type="checkbox" id="myToggle" checked>
+          <div class="toggle__fill">
+            <div class="layer">
+              <i class="fa-solid fa-user-group" style="color: #000000;"></i>
               <i class="fa-solid fa-user" style="color: #000000;"></i>
             </div>
           </div>
