--- a/client/index.html
+++ b/client/index.html
@@ -1,69 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multisweepers</title>
-  <link rel="shortcut icon" href="./img/shortcut-icon.png">
-  <link rel="stylesheet" href="./styles/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Pacifico&family=Press+Start+2P&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/4b802db70b.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <table id="leaderboard">
-    <thead>
-      <tr>
-        <th>Players</th>
-        <th>Wins</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-      </tr>
-    </tbody>
-  </table>
-  <div id="container">
-    <div id="header">
-      <!-- <h1 id="title">Multisweepers</h1> -->
-    </div>
-    <div id="sidebar">
-      <div id="serverItem">
-        <p>Server: <span id="serverCode">Loading <i class="fa-solid fa-spinner fa-spin-pulse" style="color: #FFFFFF;"></i></span></p>
-        <label id="enableJoinSwitch" for="myToggle">
-          <input class="toggle__input" name="" type="checkbox" id="myToggle" checked>
-          <div class="toggle__fill">
-            <div class="layer">
-              <i class="fa-solid fa-user-group" style="color: #000000;"></i>
-              <i class="fa-solid fa-user" style="color: #000000;"></i>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Multisweepers</title>
+    <link rel="shortcut icon" href="./img/shortcut-icon.png" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&family=Pacifico&family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/4b802db70b.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <table id="leaderboard">
+      <thead>
+        <tr>
+          <th>Players</th>
+          <th>Wins</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr></tr>
+      </tbody>
+    </table>
+    <div id="container">
+      <div id="header">
+        <!-- <h1 id="title">Multisweepers</h1> -->
+      </div>
+      <div id="sidebar">
+        <div id="serverItem">
+          <p>
+            Server:
+            <span id="serverCode"
+              >Loading
+              <i
+                class="fa-solid fa-spinner fa-spin-pulse"
+                style="color: #ffffff"
+              ></i
+            ></span>
+          </p>
+          <label id="enableJoinSwitch" for="myToggle">
+            <input
+              class="toggle__input"
+              name=""
+              type="checkbox"
+              id="myToggle"
+              checked
+            />
+            <div class="toggle__fill">
+              <div class="layer">
+                <i class="fa-solid fa-user-group" style="color: #000000"></i>
+                <i class="fa-solid fa-user" style="color: #000000"></i>
+              </div>
             </div>
-          </div>
-        </label>
-      </div>
-      <div id="difficultySelection">
-        <select id="choice">
-          <option value="easy">Easy</option>
-          <option value="medium" selected>Medium</option>
-          <option value="hard">Hard</option>
-        </select>
-      </div>
-      <form id="joinServerForm">
-        <div id="serverListContainer">
-          <i id="serverListButton" class="fa-solid fa-caret-down fa-rotate-270" style="color: #d3d3d3;"></i>
-          <div id="servers" oncontextmenu="return false;"></div>
+          </label>
         </div>
-        <input type="text" id="serverCodeInput" placeholder="Server ID">
-        <button type="submit" id="joinServerButton"><span>Join</span></button>
-      </form>
+        <div id="difficultySelection">
+          <select id="choice">
+            <option value="easy">Easy</option>
+            <option value="medium" selected>Medium</option>
+            <option value="hard">Hard</option>
+          </select>
+        </div>
+        <form id="joinServerForm" autocomplete="off">
+          <div id="serverListContainer">
+            <i
+              id="serverListButton"
+              class="fa-solid fa-caret-down fa-rotate-270"
+              style="color: #d3d3d3"
+            ></i>
+            <div id="servers" oncontextmenu="return false;"></div>
+          </div>
+          <input type="text" id="serverCodeInput" placeholder="Server ID" />
+          <button type="submit" id="joinServerButton"><span>Join</span></button>
+        </form>
+      </div>
+      <div id="gameBoard">
+        <table id="gameWindow"></table>
+      </div>
     </div>
-    <div id="gameBoard">
-      <table id="gameWindow"></table>
+    <div id="chatContainer">
+      <div class="chatGUI" style="display: none">
+        <div class="header">
+          <button class="minimizeChatButton">
+            <i class="fa-regular fa-window-minimize" style="color: #ffffff"></i>
+          </button>
+        </div>
+        <div class="chatBox">
+          <div class="chatBoxMessages"></div>
+        </div>
+        <form id="chatBoxForm" autocomplete="off">
+          <input type="text" id="chatBoxInput" placeholder="Enter a message" />
+          <button type="submit" id="chatBoxButton"><span>Send</span></button>
+        </form>
+      </div>
+      <button class="chatButton">
+        <span class="chatNotifyIcon" style="display: flex">99+</span>
+        <i class="fa-regular fa-comment fa-xl" style="color: #242121"></i>
+      </button>
     </div>
-  </div>
-  <script src="./client.js" defer></script>
-</body>
-
+    <script src="./client.js" defer></script>
+  </body>
 </html>
