implemented chat feature

--- a/client/index.html
+++ b/client/index.html
@@ -102,7 +102,7 @@
         </form>
       </div>
       <button class="chatButton">
-        <span class="chatNotifyIcon" style="display: flex">99+</span>
+        <span class="chatNotifyIcon" style="display: none"></span>
         <i class="fa-regular fa-comment fa-xl" style="color: #242121"></i>
       </button>
     </div>
